--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "files"
-version = "0.1.0"
-description = "Add your description here"
+name = "stageD"
+version = "0.2.0"
+description = "Staging Daemon for ASF Websites"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
     "asfpy>=0.56",
 ]
