remove old and unused entries from sample svnwcsub config

--- a/svnwcsub.conf
+++ b/svnwcsub.conf
@@ -1,11 +1,6 @@
 # dummy change to test maybe-update-and-restart
 
 [DEFAULT]
-svnbin: /usr/local/bin/svn
-streams: http://svn-master.apache.org:2069/commits/svn
-#         http://dist.apache.org:2069/commits/svn
-hook: /home/svnwc/svnwcsub-hook
-
 ASF: https://svn-master.apache.org/repos/asf
 INFRA: https://svn-master.apache.org/repos/infra
 CMS: %(INFRA)s/websites/production
@@ -14,67 +9,40 @@ DIST: https://dist.apache.org/repos/dist
 SITES: %(INFRA)s/sites
 
 [env]
-HOME: /home/svnwc
+HOME: /opt/staged
 LANG: en_US.UTF-8
 
 [track]
-/www/abdera.apache.org: %(ASF)s/abdera/site/trunk
-/www/ace.apache.org: %(SITES)s/ace
 /www/ant.apache.org/easyant: %(ASF)s/ant/site/easyant/production
 /www/ant.apache.org/ivy/ivyde: %(ASF)s/ant/site/ivyde/production
 /www/ant.apache.org/ivy: %(ASF)s/ant/site/ivy/production
 /www/ant.apache.org: %(ASF)s/ant/site/ant/production
-/www/any23.apache.org: %(ASF)s/any23/site
-/www/apachecon.com: %(APACHECON)s/www.apachecon.com/
 /www/apr.apache.org: %(ASF)s/apr/site/trunk/docs
 /www/archive.apachecon.com: %(APACHECON)s/archive.apachecon.com/
 /www/avalon.apache.org: %(ASF)s/avalon/site
 /www/avro.apache.org: %(ASF)s/avro/site/publish
-/www/beehive.apache.org: %(ASF)s/beehive/site/www
-/www/bloodhound.apache.org/content:  %(ASF)s/bloodhound/site
 /www/brooklyn.apache.org:  %(ASF)s/brooklyn/site/
 /www/bugs.apache.org: %(ASF)s/bugs
-/www/buildr.apache.org: %(ASF)s/buildr/site
-/www/chukwa.apache.org/content:  %(ASF)s/chukwa/site/publish
-/www/clerezza.apache.org: %(ASF)s/clerezza/site/production/
-/www/click.apache.org: %(ASF)s/click/trunk/site
 /www/climate.apache.org: %(SITES)s/climate
-/www/cocoon.apache.org: %(ASF)s/cocoon/site/site
 /www/commons.apache.org: %(CMS)s/commons
 /www/commonsrdf.apache.org: %(SITES)s/commonsrdf
-/www/continuum.apache.org: %(ASF)s/continuum/site-publish/
-/www/crunch.apache.org:  %(SITES)s/crunch
 /www/curator.apache.org:  %(ASF)s/curator/site/trunk
 /www/cxf.apache.org: %(CMS)s/cxf
 /www/datafu.apache.org: %(ASF)s/datafu/site/
 /www/db.apache.org/content/ddlutils: %(SITES)s/db/content/ddlutils/
 /www/db.apache.org/content/derby: %(SITES)s/db/content/derby/
 /www/db.apache.org/content/torque: %(SITES)s/db/content/torque/
-/www/deltacloud.apache.org: %(ASF)s/deltacloud/trunk/site/output
 /www/deltaspike.apache.org: %(SITES)s/deltaspike
-/www/devicemap.apache.org: %(SITES)s/devicemap
-/www/directmemory.apache.org: %(ASF)s/directmemory/site-content
-/www/eagle.apache.org: %(ASF)s/eagle/site/
 /www/empire-db.apache.org: %(ASF)s/empire-db/site
-/www/esme.apache.org: %(SITES)s/esme
-/www/etch.apache.org: %(SITES)s/etch
-/www/eu12.apachecon.com: %(APACHECON)s/eu12.apachecon.com/
-/www/excalibur.apache.org: %(ASF)s/excalibur/site
 /www/forrest.apache.org/dtd: %(ASF)s/forrest/trunk/main/webapp/resources/schema/dtd
 /www/forrest.apache.org/entity: %(ASF)s/forrest/trunk/main/webapp/resources/schema/entity
 /www/forrest.apache.org: %(ASF)s/forrest/site
 /www/fundraising.apache.org: %(ASF)s/fundraising/site/output/
-/www/giraph.apache.org: %(ASF)s/giraph/site
 /www/geronimo.apache.org: %(CMS)s/geronimo/
 /www/gump.apache.org: %(ASF)s/gump/site
 /www/hama.apache.org: %(ASF)s/hama/site/trunk
-/www/harmony.apache.org/eclipse/update: %(ASF)s/harmony/enhanced/tools/trunk/eclipse/org.apache.harmony.eclipse.site
-/www/harmony.apache.org/externals/regex: %(ASF)s/harmony/enhanced/java/trunk/classlib/doc/regex
-/www/harmony.apache.org/externals/security: %(ASF)s/harmony/enhanced/java/trunk/classlib/doc/security
-/www/harmony.apache.org: %(ASF)s/harmony/standard/site/branches/live/docs
 /www/hc.apache.org: %(ASF)s/httpcomponents/site
 /www/helix.apache.org: %(ASF)s/helix/site-content/
-/www/hivemind.apache.org: %(ASF)s/hivemind/site-final
 /www/docs.httpd.apache.org/1.3: %(ASF)s/httpd/httpd/branches/1.3.x/htdocs/manual
 /www/docs.httpd.apache.org/2.0: %(ASF)s/httpd/httpd/branches/2.0.x/docs/manual
 /www/docs.httpd.apache.org/2.2: %(ASF)s/httpd/httpd/branches/2.2.x/docs/manual
@@ -87,78 +55,41 @@ LANG: en_US.UTF-8
 /www/httpd.apache.org/output/mod_ftp/images: %(ASF)s/httpd/httpd/trunk/docs/manual/images
 /www/httpd.apache.org/output/mod_ftp/mod: %(ASF)s/httpd/mod_ftp/trunk/docs/manual/mod
 /www/httpd.apache.org/output/mod_ftp/style: %(ASF)s/httpd/httpd/trunk/docs/manual/style
-/www/ibatis.apache.org: %(ASF)s/ibatis/site-final
 /www/jackrabbit.apache.org: %(ASF)s/jackrabbit/site/live/
-/www/jakarta.apache.org: %(ASF)s/jakarta/site/docs
-/www/jclouds.apache.org:  %(ASF)s/jclouds/site-content/
 /www/johnzon.apache.org: %(ASF)s/johnzon/site/publish/
 /www/karaf.apache.org: %(ASF)s/karaf/site/production
 /www/knox.apache.org:  %(ASF)s/knox/site/
 /www/kylin.apache.org:  %(ASF)s/kylin/site/
-/www/labs.apache.org/: %(SITES)s/labs
-/www/lens.apache.org:  %(ASF)s/lens/site/publish/
-/www/lenya.apache.org: %(ASF)s/lenya/site
 /www/docs.lucene.apache.org: %(SITES)s/lucene
-/www/lucy.apache.org: %(SITES)s/lucy
-/www/marmotta.apache.org:  %(SITES)s/marmotta/
 /www/maven.apache.org/content/components: %(ASF)s/maven/website/components
 /www/maven.apache.org/content/doxia/components: %(ASF)s/maven/doxia/website/components
 /www/maven.apache.org/content/doxia: %(ASF)s/maven/doxia/website/content
 /www/maven.apache.org/content: %(ASF)s/maven/website/content
-/www/metamodel.apache.org: %(SITES)s/metamodel
-/www/mrunit.apache.org: %(SITES)s/mrunit
-/www/na11.apachecon.com: %(APACHECON)s/na11.apachecon.com/
-/www/na13.apachecon.com: %(INFRA)s/apachecon/na13.apachecon.com/
 /www/nifi.apache.org: %(ASF)s/nifi/site/trunk/
-/www/ode.apache.org: %(SITES)s/ode
-/www/oltu.apache.org/content:  %(ASF)s/oltu/site
-/www/onami.apache.org:  %(ASF)s/onami/site
 /www/ooo-updates.apache.org: %(ASF)s/openoffice/updates-site/trunk
 /www/perl.apache.org: %(ASF)s/perl/site
 /www/phoenix.apache.org:  %(ASF)s/phoenix/site/publish/
 /www/pig.apache.org: %(ASF)s/pig/site/publish
-/www/pivot.apache.org: %(ASF)s/pivot/site/trunk/deploy
 /www/poi.apache.org: %(ASF)s/poi/site/publish
-/www/portals.apache.org: %(ASF)s/portals/site-live
-/www/quetz.apache.org: %(ASF)s/quetzalcoatl/site
 /www/ranger.apache.org: %(ASF)s/ranger/site/trunk/
-/www/rave.apache.org: %(SITES)s/rave
-/www/reef.apache.org:  %(ASF)s/reef/site/
 /www/samza.apache.org:  %(ASF)s/samza/site/
 /www/santuario.apache.org: %(CMS)s/santuario/
-/www/sentry.apache.org: %(SITES)s/sentry
 /www/serf.apache.org: %(ASF)s/serf/site/publish/
 /www/servicemix.apache.org: %(ASF)s/servicemix/site/production
-/www/shale.apache.org: %(ASF)s/shale/site
-/www/shindig.apache.org: %(SITES)s/shindig
 /www/docs.solr.apache.org: %(SITES)s/solr
 /www/spamassassin.apache.org: %(ASF)s/spamassassin/site/
-/www/sqoop.apache.org: %(SITES)s/sqoop
-/www/stanbol.apache.org: %(SITES)s/stanbol
-/www/stdcxx.apache.org/doc: %(ASF)s/stdcxx/trunk/doc
-/www/stdcxx.apache.org: %(ASF)s/stdcxx/site
-/www/stratos.apache.org: %(SITES)s/stratos
 /www/subversion.apache.org/: %(ASF)s/subversion/site/publish
 /www/subversion-staging.apache.org/: %(ASF)s/subversion/site/staging
 /www/synapse.apache.org: %(ASF)s/synapse/site/
 /www/syncope.apache.org/content:  %(ASF)s/syncope/site
-/www/tajo.apache.org:  %(ASF)s/tajo/site/
 /www/tapestry.apache.org: %(CMS)s/tapestry
 /www/tephra.apache.org:  %(ASF)s/phoenix/tephra/site/
 /www/tez.apache.org:  %(ASF)s/tez/site/
 /www/tika.apache.org: %(ASF)s/tika/site/publish
-/www/tiles.apache.org: %(ASF)s/tiles/site/publish
 /www/tinkerpop.apache.org: %(ASF)s/tinkerpop/site/
 /www/tomcat.apache.org: %(ASF)s/tomcat/site/trunk/docs
 /www/toree.apache.org: %(ASF)s/incubator/toree/site/
-/www/tuscany.apache.org: %(ASF)s/tuscany/site/trunk/site-publish
-/www/twill.apache.org: %(ASF)s/twill/site/
 /www/uima.apache.org: %(ASF)s/uima/site/trunk/uima-website/docs
-/www/unomi.apache.org: %(ASF)s/unomi/website/
-/www/vxquery.apache.org/content:  %(ASF)s/vxquery/site/
-/www/whirr.apache.org: %(ASF)s/whirr/site/production
-/www/wink.apache.org: %(SITES)s/wink
-/www/wookie.apache.org: %(SITES)s/wookie
 /www/ws.apache.org: %(ASF)s/webservices/website
 /www/xerces.apache.org: %(ASF)s/xerces/site/trunk/production
 /www/xml.apache.org: %(ASF)s/xml/site/targets/
