OF: add unomi back after erroneously dropping the entry

--- a/svnwcsub.conf
+++ b/svnwcsub.conf
@@ -90,6 +90,7 @@ LANG: en_US.UTF-8
 /www/tomcat.apache.org: %(ASF)s/tomcat/site/trunk/docs
 /www/toree.apache.org: %(ASF)s/incubator/toree/site/
 /www/uima.apache.org: %(ASF)s/uima/site/trunk/uima-website/docs
+/www/unomi.apache.org: %(ASF)s/unomi/website/
 /www/ws.apache.org: %(ASF)s/webservices/website
 /www/xerces.apache.org: %(ASF)s/xerces/site/trunk/production
 /www/xml.apache.org: %(ASF)s/xml/site/targets/
